# backend/routes/s3Routes.js
@@ -6,6 +6,7 @@ import {
   listBucket,
   putObject,
   listObjectFromBucket,
+  deleteObject,
 } from "../controllers/s3Controllers.js";
 import { protect } from "../middleware/authMiddleware.js";
 
@@ -13,5 +14,6 @@ router.get("/get-object/:objectKey", getObject);
 router.post("/:bucketName", protect, upload.single("file"), putObject);
 router.get("/list-buckets", protect, listBucket);
 router.get("/list-object/:bucketId", protect, listObjectFromBucket);
+router.delete("/delete-object/:objectKey", protect, deleteObject);
 
 export default router;
